[package]
name = "vbyte"
description = "Pure-rust implementation of VByte algorithm for u64"
version = "0.1.0"
authors = ["6br <tfdvrt@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/user-tax-dev/vbyte"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
